# apex-wip

./: .gitignore  Makefile  README.md  Taskfile.yaml
apex-ast-codegen/: README.md  apex.yaml  apexlang.apexlang  apexv2.apexlang  ast.ts  attribute-order.json.txt  package-lock.json  package.json
apex-ast-codegen/src/: index.ts  typescript.ts  utils.ts
rust/apex-ast/: Cargo.toml
rust/apex-parser/: Cargo.toml
rust/apex-parser/src/: lib.rs  widl.pest
rust/apex-parser/src/examples/: annotations.widl  annotations.widl.json  enums.widl  imports.widl.json  namespaces.widl.json
test-data/: package-lock.json  package.json
test-data/apexlang/: alltypes.apexlang  annotations.apexlang  defaults.apexlang  descriptions.apexlang  enums.apexlang  namespaces.apexlang  openapi.apexlang  test-data-1.apexlang
test-data/json/: alltypes.apexlang.json  annotations.apexlang.json  defaults.apexlang.json  descriptions.apexlang.json  enums.apexlang.json  imports.apexlang.json  interfaces.apexlang.json  namespaces.apexlang.json  openapi.apexlang.json  test-data-1.apexlang.json
test-data/scripts/: serialize.js
typescript/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
typescript/.config/: .mocharc.json
typescript/apex-ast/: package.json  tsconfig.json
typescript/apex-parser/: README.md  apex.peggy  package-lock.json  (+1 more)
widl-ast-js/: README.md  package-lock.json  package.json
widl-parser-js/: new.json  package-lock.json  package.json  tsconfig.json  widl.pegjs
widl-spec/: attribute-order.json  package-lock.json  package.json  widl-spec.json  widl.idl
(+56 files in other folders)
