[package]
name = "widl-parser"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
widl-ast = { path = "../widl-ast-rust" }
log = "0.4.14"
anyhow = "1.0.40"
pest_consume = "1.0.6"
structopt = { version = "0.3.21", features = [] }
serde_json = "1.0.64"

[dev-dependencies]
test-env-log = "0.2.7"
env_logger = "0.8.3"
assert-json-diff = "2.0.1"

[[bin]]
name = "widl-parser"
path = "./src/cli.rs"
